Use font-display:swap to avoid invisible text while the fonts load
This approach results in a FOUT (flash of unstyled text),
as opposed to the default behavior, which yields a FOIT (flash of invisible text).

Also add "typography" in my interests, appropriately enough.

--- a/css/libertinus-serif.css
+++ b/css/libertinus-serif.css
@@ -3,22 +3,26 @@
   font-style: normal;
   font-weight: normal;
   src: local('Libertinus Serif'), url('../font/LibertinusSerif-Regular.woff2') format('woff2');
+  font-display: swap;
 }
 @font-face {
   font-family: 'Libertinus Serif';
   font-style: italic;
   font-weight: normal;
   src: local('Libertinus Serif'), url('../font/LibertinusSerif-Italic.woff2') format('woff2');
+  font-display: swap;
 }
 @font-face {
   font-family: 'Libertinus Serif';
   font-style: normal;
   font-weight: bold;
   src: local('Libertinus Serif'), url('../font/LibertinusSerif-Bold.woff2') format('woff2');
+  font-display: swap;
 }
 @font-face {
   font-family: 'Libertinus Serif';
   font-style: italic;
   font-weight: bold;
   src: local('Libertinus Serif'), url('../font/LibertinusSerif-BoldItalic.woff2') format('woff2');
+  font-display: swap;
 }
